--- a/codigos/ActiveRecordNutellaComDAO/nbproject/project.properties
+++ b/codigos/ActiveRecordNutellaComDAO/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ExemploNN
-application.vendor=iapereira
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ExemploNN.jar
+dist.jar=${dist.dir}/ActiveRecordNutellaComDAO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ExemploNN
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/ActiveRecordNutellaComDAO
 excludes=
 includes=**
 jar.compress=false
@@ -47,8 +45,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=14
+javac.target=14
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -73,7 +71,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ExemploNN
+jlink.launcher.name=ActiveRecordNutellaComDAO
 main.class=apresentacao.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
