codigo aula repository

--- a/codigos/AulaRepository150322/nbproject/project.properties
+++ b/codigos/AulaRepository150322/nbproject/project.properties
@@ -28,12 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AppDAO.jar
+dist.jar=${dist.dir}/AulaRepository150322.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/AppDAO
+dist.jlink.output=${dist.jlink.dir}/AulaRepository150322
 excludes=
-file.reference.java-json.jar=/home/iapereira/Desktop/java-json.jar
+file.reference.java-json.jar=../../../../Desktop/java-json.jar
 file.reference.postgresql-42.2.20.jar=postgresql-42.2.20.jar
 includes=**
 jar.compress=false
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=AppDAO
+jlink.launcher.name=AulaRepository150322
 main.class=apresentacao.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
